; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_set_cert_name_string.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_set_cert_name_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i64, i32 }
%struct.TYPE_5__ = type { i32, i32, i32 }

@IDC_CERTIFICATE_NAMES = common dso_local global i32 0, align 4
@CFM_BOLD = common dso_local global i32 0, align 4
@CFE_BOLD = common dso_local global i64 0, align 8
@EM_SETCHARFORMAT = common dso_local global i32 0, align 4
@SCF_SELECTION = common dso_local global i32 0, align 4
@PFM_STARTINDENT = common dso_local global i32 0, align 4
@MY_INDENT = common dso_local global i32 0, align 4
@CERT_NAME_SIMPLE_DISPLAY_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @set_cert_name_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_cert_name_string(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8, align 1
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_6__, align 8
  %12 = alloca %struct.TYPE_5__, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i8 10, i8* %9, align 1
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @IDC_CERTIFICATE_NAMES, align 4
  %15 = call i32 @GetDlgItem(i32 %13, i32 %14)
  store i32 %15, i32* %10, align 4
  %16 = call i32 @memset(%struct.TYPE_6__* %11, i32 0, i32 24)
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  store i32 24, i32* %17, align 8
  %18 = load i32, i32* @CFM_BOLD, align 4
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 2
  store i32 %18, i32* %19, align 8
  %20 = load i64, i64* @CFE_BOLD, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 1
  store i64 %20, i64* %21, align 8
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* @EM_SETCHARFORMAT, align 4
  %24 = load i32, i32* @SCF_SELECTION, align 4
  %25 = ptrtoint %struct.TYPE_6__* %11 to i32
  %26 = call i32 @SendMessageW(i32 %22, i32 %23, i32 %24, i32 %25)
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  store i32 12, i32* %27, align 4
  %28 = load i32, i32* @PFM_STARTINDENT, align 4
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 2
  store i32 %28, i32* %29, align 4
  %30 = load i32, i32* @MY_INDENT, align 4
  %31 = mul nsw i32 %30, 3
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  store i32 %31, i32* %32, align 4
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* %8, align 4
  %35 = call i32 @add_string_resource_with_paraformat_to_control(i32 %33, i32 %34, %struct.TYPE_5__* %12)
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 1
  store i64 0, i64* %36, align 8
  %37 = load i32, i32* %10, align 4
  %38 = load i32, i32* @EM_SETCHARFORMAT, align 4
  %39 = load i32, i32* @SCF_SELECTION, align 4
  %40 = ptrtoint %struct.TYPE_6__* %11 to i32
  %41 = call i32 @SendMessageW(i32 %37, i32 %38, i32 %39, i32 %40)
  %42 = load i32, i32* %10, align 4
  %43 = load i32, i32* %6, align 4
  %44 = load i32, i32* @CERT_NAME_SIMPLE_DISPLAY_TYPE, align 4
  %45 = load i32, i32* %7, align 4
  %46 = call i32 @add_cert_string_to_control(i32 %42, i32 %43, i32 %44, i32 %45)
  %47 = load i32, i32* %10, align 4
  %48 = call i32 @add_unformatted_text_to_control(i32 %47, i8* %9, i32 1)
  %49 = load i32, i32* %10, align 4
  %50 = call i32 @add_unformatted_text_to_control(i32 %49, i8* %9, i32 1)
  %51 = load i32, i32* %10, align 4
  %52 = call i32 @add_unformatted_text_to_control(i32 %51, i8* %9, i32 1)
  ret void
}

declare dso_local i32 @GetDlgItem(i32, i32) #1

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1

declare dso_local i32 @add_string_resource_with_paraformat_to_control(i32, i32, %struct.TYPE_5__*) #1

declare dso_local i32 @add_cert_string_to_control(i32, i32, i32, i32) #1

declare dso_local i32 @add_unformatted_text_to_control(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
